refactor: refactor: velog 과제 서희 코드리뷰 반영, 일부 클래스 명명법 수정

--- a/week1/velog.html
+++ b/week1/velog.html
@@ -32,26 +32,26 @@
     </header>
     <nav>
         <div class="nav_left-menu">
-            <button type='button' class="nav_button nav_trending_topic">
+            <button type="button"class="nav_button nav_trending_topic">
                 <span class="material-symbols-outlined">
                     trending_up
                 </span>
                 <p>트렌딩</p>
             </button>
-            <button type='button' class="nav_button nav_new_topic">
+            <button type="button" class="nav_button nav_new_topic">
                 <span class="material-symbols-outlined" style="margin-bottom:0.3rem;">
                     schedule
                 </span>
                 <p>최신</p>
             </button>
-            <button type='button' class="nav_button period_setting">
+            <button type="button"class="nav_button period_setting">
                 <p>이번 주</p>
                 <span class="material-symbols-outlined">
                     expand_more
                 </span>
             </button>
         </div>
-        <button  type='button' class="nav_expand-button">
+        <button type='button' class="nav_expand-button">
             <span class="material-symbols-outlined">
                 more_vert
             </span>
@@ -59,21 +59,21 @@
     </nav>
     <main>
         <section>
-            <div class="article_card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
-                <div class="content_container">
-                    <h2 class="article_title">웹파트 화이팅!</h2>
-                    <p class="article_content">
+            <div class="article__card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                <div class="content__container">
+                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <p class="article__content">
                         아좌좌</br>아좌좌</br>화이팅합시다
                     </p>
-                    <small class="article_info">4일 전 1개의 댓글</small>
+                    <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
-                <div class="content_footer">
-                    <div class="publisher_profile">
-                        <div class="publisher_photo">K</div>
-                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                <div class="content__footer">
+                    <div class="publisher__profile">
+                        <div class="publisher__photo">K</div>
+                        <p >by <b class="publisher__name">NamjunKim</b></p> 
                     </div>
-                    <div class="article_likes">
+                    <div class="article__likes">
                         <span class="material-symbols-outlined">
                             favorite
                         </span>
@@ -81,21 +81,21 @@
                     </div>
                 </div>
             </div>
-            <div class="article_card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
-                <div class="content_container">
-                    <h2 class="article_title">웹파트 화이팅!</h2>
-                    <p class="article_content">
+            <div class="article__card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                <div class="content__container">
+                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <p class="article_conten_t">
                         아좌좌</br>아좌좌</br>화이팅합시다
                     </p>
-                    <small class="article_info">4일 전 1개의 댓글</small>
+                    <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
-                <div class="content_footer">
-                    <div class="publisher_profile">
-                        <div class="publisher_photo">K</div>
-                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                <div class="content__footer">
+                    <div class="publisher__profile">
+                        <div class="publisher__photo">K</div>
+                        <p >by <b class="publisher__name">NamjunKim</b></p> 
                     </div>
-                    <div class="article_likes">
+                    <div class="article__likes">
                         <span class="material-symbols-outlined">
                             favorite
                         </span>
@@ -103,21 +103,21 @@
                     </div>
                 </div>
             </div>
-            <div class="article_card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
-                <div class="content_container">
-                    <h2 class="article_title">웹파트 화이팅!</h2>
-                    <p class="article_content">
+            <div class="article__card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                <div class="content__container">
+                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <p class="article__content">
                         아좌좌</br>아좌좌</br>화이팅합시다
                     </p>
-                    <small class="article_info">4일 전 1개의 댓글</small>
+                    <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
-                <div class="content_footer">
-                    <div class="publisher_profile">
-                        <div class="publisher_photo">K</div>
-                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                <div class="content__footer">
+                    <div class="publisher__profile">
+                        <div class="publisher__photo">K</div>
+                        <p >by <b class="publisher__name">NamjunKim</b></p> 
                     </div>
-                    <div class="article_likes">
+                    <div class="article__likes">
                         <span class="material-symbols-outlined">
                             favorite
                         </span>
@@ -125,21 +125,21 @@
                     </div>
                 </div>
             </div>
-            <div class="article_card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
-                <div class="content_container">
-                    <h2 class="article_title">웹파트 화이팅!</h2>
-                    <p class="article_content">
+            <div class="article__card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                <div class="content__container">
+                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <p class="article__content">
                         아좌좌</br>아좌좌</br>화이팅합시다
                     </p>
-                    <small class="article_info">4일 전 1개의 댓글</small>
+                    <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
-                <div class="content_footer">
-                    <div class="publisher_profile">
-                        <div class="publisher_photo">K</div>
-                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                <div class="content__footer">
+                    <div class="publisher__profile">
+                        <div class="publisher__photo">K</div>
+                        <p >by <b class="publisher__name">NamjunKim</b></p> 
                     </div>
-                    <div class="article_likes">
+                    <div class="article__likes">
                         <span class="material-symbols-outlined">
                             favorite
                         </span>
@@ -147,21 +147,21 @@
                     </div>
                 </div>
             </div>
-            <div class="article_card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
-                <div class="content_container">
-                    <h2 class="article_title">웹파트 화이팅!</h2>
-                    <p class="article_content">
+            <div class="article__card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                <div class="content__container">
+                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <p class="article__content">
                         아좌좌</br>아좌좌</br>화이팅합시다
                     </p>
-                    <small class="article_info">4일 전 1개의 댓글</small>
+                    <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
-                <div class="content_footer">
-                    <div class="publisher_profile">
-                        <div class="publisher_photo">K</div>
-                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                <div class="content__footer">
+                    <div class="publisher__profile">
+                        <div class="publisher__photo">K</div>
+                        <p >by <b class="publisher__name">NamjunKim</b></p> 
                     </div>
-                    <div class="article_likes">
+                    <div class="article__likes">
                         <span class="material-symbols-outlined">
                             favorite
                         </span>
@@ -169,21 +169,21 @@
                     </div>
                 </div>
             </div>
-            <div class="article_card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
-                <div class="content_container">
-                    <h2 class="article_title">웹파트 화이팅!</h2>
-                    <p class="article_content">
+            <div class="article__card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                <div class="content__container">
+                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <p class="article__content">
                         아좌좌</br>아좌좌</br>화이팅합시다
                     </p>
-                    <small class="article_info">4일 전 1개의 댓글</small>
+                    <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
-                <div class="content_footer">
-                    <div class="publisher_profile">
-                        <div class="publisher_photo">K</div>
-                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                <div class="content__footer">
+                    <div class="publisher__profile">
+                        <div class="publisher__photo">K</div>
+                        <p >by <b class="publisher__name">NamjunKim</b></p> 
                     </div>
-                    <div class="article_likes">
+                    <div class="article__likes">
                         <span class="material-symbols-outlined">
                             favorite
                         </span>
@@ -191,21 +191,21 @@
                     </div>
                 </div>
             </div>
-            <div class="article_card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
-                <div class="content_container">
-                    <h2 class="article_title">웹파트 화이팅!</h2>
-                    <p class="article_content">
+            <div class="article__card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                <div class="content__container">
+                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <p class="article__content">
                         아좌좌</br>아좌좌</br>화이팅합시다
                     </p>
-                    <small class="article_info">4일 전 1개의 댓글</small>
+                    <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
-                <div class="content_footer">
-                    <div class="publisher_profile">
-                        <div class="publisher_photo">K</div>
-                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                <div class="content__footer">
+                    <div class="publisher__profile">
+                        <div class="publisher__photo">K</div>
+                        <p >by <b class="publisher__name">NamjunKim</b></p> 
                     </div>
-                    <div class="article_likes">
+                    <div class="article__likes">
                         <span class="material-symbols-outlined">
                             favorite
                         </span>
@@ -213,21 +213,21 @@
                     </div>
                 </div>
             </div>
-            <div class="article_card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
-                <div class="content_container">
-                    <h2 class="article_title">웹파트 화이팅!</h2>
-                    <p class="article_content">
+            <div class="article__card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                <div class="content__container">
+                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <p class="article__content">
                         아좌좌</br>아좌좌</br>화이팅합시다
                     </p>
-                    <small class="article_info">4일 전 1개의 댓글</small>
+                    <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
-                <div class="content_footer">
-                    <div class="publisher_profile">
-                        <div class="publisher_photo">K</div>
-                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                <div class="content__footer">
+                    <div class="publisher__profile">
+                        <div class="publisher__photo">K</div>
+                        <p >by <b class="publisher__name">NamjunKim</b></p> 
                     </div>
-                    <div class="article_likes">
+                    <div class="article__likes">
                         <span class="material-symbols-outlined">
                             favorite
                         </span>
@@ -235,21 +235,21 @@
                     </div>
                 </div>
             </div>
-            <div class="article_card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail_container">
-                <div class="content_container">
-                    <h2 class="article_title">웹파트 화이팅!</h2>
-                    <p class="article_content">
+            <div class="article__card">
+                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                <div class="content__container">
+                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <p class="article__content">
                         아좌좌</br>아좌좌</br>
                     </p>
-                    <small class="article_info">4일 전 1개의 댓글</small>
+                    <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
-                <div class="content_footer">
-                    <div class="publisher_profile">
-                        <div class="publisher_photo">K</div>
-                        <p >by <b class="publisher_name">NamjunKim</b></p> 
+                <div class="content__footer">
+                    <div class="publisher__profile">
+                        <div class="publisher__photo">K</div>
+                        <p >by <b class="publisher__name">NamjunKim</b></p> 
                     </div>
-                    <div class="article_likes">
+                    <div class="article__likes">
                         <span class="material-symbols-outlined">
                             favorite
                         </span>
