--- a/week2/TodoList.html
+++ b/week2/TodoList.html
@@ -6,15 +6,16 @@
     <title>My TodoList</title>
     <link rel="stylesheet" href="TodoListStyle.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <script defer src='/week2/TodoList.js'></script>
 </head>
 <body>
     <header>
         <h2>할 일을 정리해봅시다 뚝딱</h2>
     </header>
     <nav>
-        <button type="button">오늘만 보기</button>
-        <button type="button">내일만 보기</button>
-        <button type="button">함께 보기</button>
+        <button type="button" class="action-btn">오늘만 보기</button>
+        <button type="button" class="action-btn">내일만 보기</button>
+        <button type="button" class="action-btn">함께 보기</button>
     </nav>
     <main>
         <section class="left-section">
@@ -23,7 +24,7 @@
             </div>
             <div class="input__container">
                 <input type="text" placeholder="계획을 추가해주세요">
-                <button type="button" class="item-add__button">
+                <button type="button" class="item-add__button action-btn">
                     <span class="material-symbols-outlined">
                         add
                     </span>
@@ -36,17 +37,9 @@
                 <ul class="todo-list">
                     <li class="todo-list__item">
                         <p class="list-item__content">나무 게임 하기</p>
-                        <button type="button" class="item-delete__button">
+                        <button type="button" class="item-delete__button action-btn">
                             <span class="material-symbols-outlined">
                                 delete
-                            </span>
-                        </button>
-                    </li>
-                    <li class="todo-list__item">
-                        <p class="list-item__content">세미나 과제 하기</p>
-                        <button type="button" class="item-delete__button">
-                            <span class="material-symbols-outlined">
-                            delete
                             </span>
                         </button>
                     </li>
@@ -54,7 +47,7 @@
             </div>
             <div class="input__container">
                 <input type="text" placeholder="계획을 추가해주세요">
-                <button type="button" class="item-add__button">
+                <button type="button" class="item-add__button action-btn">
                     <span class="material-symbols-outlined">
                         add
                     </span>
