style : chore: typescript 초기 세팅

--- a/week2/TodoList.html
+++ b/week2/TodoList.html
@@ -6,7 +6,7 @@
     <title>My TodoList</title>
     <link rel="stylesheet" href="TodoListStyle.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script defer src='/week2/TodoList.js'></script>
+    <script defer src='/week2/TodoListScript.js'></script>
 </head>
 <body>
     <header>
