--- a/week2/TodoList.html
+++ b/week2/TodoList.html
@@ -6,48 +6,61 @@
     <title>My TodoList</title>
     <link rel="stylesheet" href="TodoListStyle.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script defer src='/week2/TodoListScript.js'></script>
 </head>
 <body>
     <header>
         <h2>할 일을 정리해봅시다 뚝딱</h2>
     </header>
     <nav>
-        <button type="button" class="action-btn">오늘만 보기</button>
-        <button type="button" class="action-btn">내일만 보기</button>
-        <button type="button" class="action-btn">함께 보기</button>
+        <ul class="nav-list">
+            <li>
+                <button type="button" class="action-btn nav-btn">오늘만 보기</button>
+            </li>
+            <li>
+                <button type="button" class="action-btn nav-btn">내일만 보기</button>
+            </li>
+            <li>
+                <button type="button" class="action-btn nav-btn">함께 보기</button>
+            </li>
+        </ul>
     </nav>
     <main>
-        <section class="left-section">
+        <section class="section today-section">
             <h2>오늘 할 일</h2>
             <div class="todos__container">
+                <ul class="todo-list today-todos">
+                    <li class="todo-list__item">
+                        <p class="list-item__content">나무 게임 하기</p>
+                        <button type="button" class="item-delete__button action-btn">
+                            X
+                        </button>
+                    </li>
+                </ul>
             </div>
             <div class="input__container">
-                <input type="text" placeholder="계획을 추가해주세요">
-                <button type="button" class="item-add__button action-btn">
+                <input type="text" placeholder="오늘의 계획을 추가해주세요" class="today-todo__input">
+                <button type="button" class="today-add__button action-btn">
                     <span class="material-symbols-outlined">
                         add
                     </span>
                 </button>
             </div>
         </section>
-        <section class="right-section">
+        <section class="section tomorrow-section">
             <h2>내일 할 일</h2>
             <div class="todos__container">
-                <ul class="todo-list">
+                <ul class="todo-list tomorrow-todos">
                     <li class="todo-list__item">
                         <p class="list-item__content">나무 게임 하기</p>
                         <button type="button" class="item-delete__button action-btn">
-                            <span class="material-symbols-outlined">
-                                delete
-                            </span>
+                            X
                         </button>
                     </li>
                 </ul>
             </div>
             <div class="input__container">
-                <input type="text" placeholder="계획을 추가해주세요">
-                <button type="button" class="item-add__button action-btn">
+                <input type="text" placeholder="내일의 계획을 추가해주세요" class="tomorrow-todo__input">
+                <button type="button" class="tomorrow-add__button action-btn">
                     <span class="material-symbols-outlined">
                         add
                     </span>
@@ -57,5 +70,7 @@
         </section>
     </main>
     <footer>Copyright C INSOPT</footer>
+
+    <script type='module' src='TodoListScript.js'></script>
 </body>
 </html>
