feat : write페이지 로컬스토리지 설정, 코드 구조 리팩토링

--- a/week2/velog/write.html
+++ b/week2/velog/write.html
@@ -29,7 +29,7 @@
             font-size:1.5rem;
             padding: 1rem 2rem;
             color: rgb(86, 205, 86);
-            margin: 0.5rem;
+            margin: 0rem 0.5rem 0.5rem 0.5rem;
         }
 
         .tags-input{
@@ -45,13 +45,12 @@
 <body>
     <h1> 태그 추가하기 </h1>
     <main class="tags-main">
-        <ul class="tags-list">
-            <li class="tag-item">자바스크립트</li>
-        </ul>
+        <ul class="tags-list"></ul>
         <form class="tags-form">
             <input type="text" placeholder="태그는 여기에 입력" class="tags-input">
         </form>
     </main>
+    <button type="button" class="move-btn">홈으로</button>
 </body>
 <script type="module" src="./write.js"></script>
 </html>
