feat : velog 모달 클릭기능, 이벤트 버블링 방지기능 구현

--- a/week2/velog/velog.html
+++ b/week2/velog/velog.html
@@ -70,7 +70,7 @@
                 <div class="content__container">
                     <h2 class="article__title">웹파트 화이팅!</h2>
                     <p class="article__content">
-                        아좌좌</br>아좌좌</br>화이팅합시다
+                        사랑해요</br>웹파트</br>화이팅합시다
                     </p>
                     <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
@@ -90,9 +90,9 @@
             <div class="article__card">
                 <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
                 <div class="content__container">
-                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <h2 class="article__title">사랑해요 이주함!</h2>
                     <p class="article_conten_t">
-                        아좌좌</br>아좌좌</br>화이팅합시다
+                        사랑해요</br>웹팟짱</br>이주함
                     </p>
                     <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
@@ -112,9 +112,9 @@
             <div class="article__card">
                 <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
                 <div class="content__container">
-                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <h2 class="article__title">나는 바보입니다</h2>
                     <p class="article__content">
-                        아좌좌</br>아좌좌</br>화이팅합시다
+                        흐아암</br>졸리다</br>화이팅
                     </p>
                     <small class="article__info">4일 전 1개의 댓글</small>
                 </div>
@@ -134,7 +134,7 @@
             <div class="article__card">
                 <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
                 <div class="content__container">
-                    <h2 class="article__title">웹파트 화이팅!</h2>
+                    <h2 class="article__title">킹왕짱 웹파트</h2>
                     <p class="article__content">
                         아좌좌</br>아좌좌</br>화이팅합시다
                     </p>
